# labs-arque

./: README.md  WORKSPACE
apps/store/: Cargo.toml
apps/store/benches/: helpers.rs  store_insert_event.rs
apps/store/src/: client.rs  database.rs  lib.rs  main.rs
apps/store/src/controller/: controller.rs
apps/store/src/controllers/: controller_context.rs  insert_event.rs  list_aggregate_events.rs  mod.rs
apps/store/src/server/: mod.rs
apps/store/src/store/: mock.rs  mod.rs  rocksdb_store.rs  store.rs
apps/store/src/store_next/: mod.rs  rocksdb_store.rs
apps/store/src/stream/: consumer.rs  kafka_stream.rs  mock.rs  mod.rs  stream.rs
apps/store/tests/: helpers.rs  helpers_next.rs  insert_event.rs  list_aggregate_events.rs
apps/store_next/: Cargo.toml
apps/store_next/benches/: store_insert_event.rs
apps/store_next/src/: main.rs
apps/store_next/src/store/: event.rs  mod.rs  rocksdb_store.rs
apps/store_next/tests/: helpers.rs
docs/: faqs.md
experiments/rocksdb/: Cargo.toml
experiments/rocksdb/data.db/: IDENTITY  LOG
experiments/rocksdb/src/: main.rs
lib/common/: Cargo.toml  README.md
lib/common/schema/: event.fbs
lib/common/src/: lib.rs
lib/driver/: Cargo.toml
lib/driver/src/: client.rs  main.rs
libs/client/node/: README.md
libs/client/node/src/: lib.rs
libs/common/: Cargo.toml  README.md
libs/common/schema/: event.fbs  request.fbs  response.fbs
libs/common/src/: event_generated.rs  event_id.rs  lib.rs  object_id.rs  request_generated.rs  response_generated.rs
libs/driver/: Cargo.toml
libs/driver/src/: client.rs  lib.rs  main.rs  types.rs
libs/node-client/: .eslintrc.json  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
libs/node-client/docs/: digest.md  load.md  notes.md  process.md  reload.md
libs/node-client/examples/: aggregate-in-memory.ts  aggregate-state-in-memory.ts  aggregate-state-in-storage.ts
libs/node-client/src/: aggregate-instance.test.ts  aggregate-instance.ts  aggregate.test.ts  aggregate.ts  arque.ts  client.ts  command.ts  common.ts  error.ts  event.ts  main.ts  object-id.ts  type.ts
libs/node-driver/: .eslintrc  .gitignore  Cargo.toml  jest.config.ts  package-lock.json  package.json  tsconfig.json
libs/node-driver/src/: arque-driver.ts  index.ts  lib.rs  types.ts
libs/node-driver/test/: insert_event.test.ts
