[package]
name = "arque_store"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.9"
tokio = { version = "1.0", features = ["full"] }
custom_error = "1.9"
rocksdb = "0.19"
arque_common = { path = "../../lib/common" }
chrono = "0.4"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics", 
]

[dev-dependencies]
rstest = "0.15.0"


[[bin]]
name = "rocksdb"
path = "./src/store/rocksdb_store.rs"