[package]
name = "arque_store"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.9"
tokio = { version = "1.0", features = ["full"] }
custom_error = "1.9"
rocksdb = "0.19"
arque_common = { path = "../../lib/common" }
chrono = "0.4"
byteorder = "1.4.3"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
async-trait = "0.1.57"
futures = "0.3.24"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics", 
]

[dev-dependencies]
rstest = "0.15.0"

[[bin]]
name = "rocksdb"
path = "./src/store/rocksdb_store.rs"

[[bin]]
name = "kafkastream"
path = "./src/stream/kafka_stream.rs"

[[bin]]
name = "consumer"
path = "./src/stream/consumer.rs"