[package]
name = "arque_store"
version = "0.1.0"
edition = "2021"
exclude = ["tests/*"]

[dependencies]
zmq = "0.9"
tokio = { version = "1.0", features = ["full"] }
custom_error = "1.9"
rocksdb = "0.19"
arque_common = { path = "../../libs/common" }
chrono = "0.4"
byteorder = "1.4.3"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
async-trait = "0.1.57"
futures = "0.3.24"
flatbuffers = "2.1.2"
fastrand = "1.8"
mockall = "0.11.3"
hex = "0.4.3"
ctrlc = "3.2"
get-port = "4.0.0"
tempdir = "0.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics", 
]

[dev-dependencies]
rstest = "0.15"
criterion = "0.3"

[[bench]]
name = "store_insert_event"
harness = false

