[package]
name = "arque_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.9"
fastrand = "1.8"
oneshot = "0.1"
tokio = { version = "1.21", features = ["full"] }
futures = "0.3"
arque_common = { path = "../common" }
flatbuffers = "2.1.2"
bytes = "1.3.0"
custom_error = "1.9"

[dev-dependencies]
get-port = "4.0.0"
rstest = "0.15.0"
