[package]
name = "node"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arque_common = { path = "../common" }
arque_driver = { path = "../driver" }
flatbuffers = "2.1.2"
tokio = { version = "1.21", features = ["full"] }
once_cell = "1.16.0"
fastrand = "1.8.0"
casual_logger = "0.6.5"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]

